--- a/style.css
+++ b/style.css
@@ -1,40 +1,75 @@
 /* custom style */
 
-  /* imported fonts  */
+/* imported fonts  */
 
-  @import url("https://fonts.googleapis.com/css2?family=EB+Garamond:wght@800&family=Poppins:wght@400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:wght@800&family=Poppins:wght@400;500;600;700;800&display=swap");
 
-  .font-poppins {
-    font-family: "Poppins", sans-serif;
-  }
-  .font-garamond {
-    font-family: "EB Garamond", serif;
-  }
+.font-poppins {
+  font-family: "Poppins", sans-serif;
+}
+.font-garamond {
+  font-family: "EB Garamond", serif;
+}
 
-  
-  .technologyIndex {
-    background-image: url(./images/bg-s2-home3.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .buildYourWebsite {
-    background-image: url(./images/bg.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .consultant {
-    background-image: url(./images/consultation.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  .transitionEase {
-    transition: left 0.5s ease;
-  }
+.technologyIndex {
+  background-image: url(./images/bg-s2-home3.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.buildYourWebsite {
+  background-image: url(./images/bg.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.consultant {
+  background-image: url(./images/consultation.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.transitionEase {
+  transition: left 0.5s ease;
+}
 
+.cursor {
+  cursor: arrow !important;
+}
 
-  .cursor{
-    cursor: arrow !important;
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.5s ease;
+}
+
+.loader {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #078586; /* Using your btnColor */
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.preloader-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
